[package]
name = "fixme-roulette"
version = "0.1.1"
edition = "2021"
authors = ["Axel Jacobsen <axelnj44@gmail.com>"]
license = "MIT"
description = "Spin the wheel, get a task!"
readme = "README.md"
homepage = "https://github.com/Axel-Jacobsen/roulette"
repository = "https://github.com/Axel-Jacobsen/roulette"
keywords = ["cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shell-escape = "0.1.5"
termcolor = "1.2.0"  # BurntSushi!
rand = "0.8.5"
