[package]
name = "fixme-roulette"
version = "0.1.3"
edition = "2021"
authors = ["Axel Jacobsen <axelnj44@gmail.com>"]
license = "MIT"
description = "Spin the wheel, get a task!"
readme = "README.md"
homepage = "https://github.com/Axel-Jacobsen/roulette"
repository = "https://github.com/Axel-Jacobsen/roulette"
keywords = ["cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "roulette"
path = "src/main.rs"
test = false
bench = false

[dependencies]
shell-escape = "0.1.5"
termcolor = "1.2.0"
rand = "0.8.5"
regex = "1"
